--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,4 +17,21 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
-  uses-material-design: true 
+  uses-material-design: true
+  
+  # Assets
+  assets:
+    - assets/fonts/
+  
+  # Fonts
+  fonts:
+    - family: Instrument Sans
+      fonts:
+        - asset: assets/fonts/InstrumentSans-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/InstrumentSans-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/InstrumentSans-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/InstrumentSans-Bold.ttf
+          weight: 700 
