--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ ios/Flutter/app.flx
 ios/Flutter/app.zip
 ios/Flutter/flutter_assets/
 ios/ServiceDefinitions.json
+ios/Runner/GoogleService-Info.plist
 
 # Android
 android/.gradle/
