--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: leaff_app
-description: Application bas carbone inspirée de Finary
+description: Low carbon footprint app
 publish_to: "none"
 version: 0.1.0
 
@@ -15,6 +15,8 @@ dependencies:
   firebase_auth: ^5.5.4
   google_sign_in: ^6.1.6
   flutter_local_notifications: ^16.2.0
+  provider: ^6.1.1
+  xml2json: ^6.2.7
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +28,7 @@ flutter:
   # Assets
   assets:
     - assets/fonts/
+    - assets/images/
 
   # Fonts
   fonts:
