--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,11 @@ dependencies:
   flutter_local_notifications: ^16.2.0
   provider: ^6.1.1
   xml2json: ^6.2.7
+  intl: ^0.19.0
+  shared_preferences: ^2.3.3
+  dart_rss: ^3.0.3
+  flutter_widget_from_html: ^0.10.0+1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
