--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,6 +31,7 @@ target 'Runner' do
   use_frameworks!
   
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  pod 'PhoneNumberKit', '~> 3.7.0'
   target 'RunnerTests' do
     inherit! :search_paths
   end
