--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -20,9 +22,42 @@
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.763792070353-vjv69fphsjfhmhg5l1rspqfabuh6kpcp</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.leaff.app.powens</string> <!-- Identifiant unique pour ce URL scheme -->
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>leaffapp</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<key>GIDClientID</key>
+	<string>763792070353-vjv69fphsjfhmhg5l1rspqfabuh6kpcp.apps.googleusercontent.com</string>
+	<key>GOOGLE_API_KEY</key>
+	<string>AIzaSyDf28VImvQtCcmWQMy6691E49DQ1dUTN_o</string>
 	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>This app requires access to the camera to allow users to sign in with their Google account.</string>
+	<key>NSContactsUsageDescription</key>
+	<string>This app requires access to contacts to allow users to sign in with their Google account.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app requires access to the photo library to allow users to sign in with their Google account.</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
@@ -41,30 +76,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>com.googleusercontent.apps.763792070353-vjv69fphsjfhmhg5l1rspqfabuh6kpcp</string>
-			</array>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-		</dict>
-	</array>
-	<key>GIDClientID</key>
-	<string>763792070353-vjv69fphsjfhmhg5l1rspqfabuh6kpcp.apps.googleusercontent.com</string>
-	<key>GOOGLE_API_KEY</key>
-	<string>AIzaSyDf28VImvQtCcmWQMy6691E49DQ1dUTN_o</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app requires access to the photo library to allow users to sign in with their Google account.</string>
-	<key>NSCameraUsageDescription</key>
-	<string>This app requires access to the camera to allow users to sign in with their Google account.</string>
-	<key>NSContactsUsageDescription</key>
-	<string>This app requires access to contacts to allow users to sign in with their Google account.</string>
 </dict>
 </plist>
