--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,22 @@ dependencies:
   dart_rss: ^3.0.3
   flutter_widget_from_html: ^0.10.0+1
   url_launcher: ^6.3.1
+  flutter_secure_storage: ^9.0.0
+  flutter_dotenv: ^5.1.0
+  json_annotation: ^4.9.0
+  freezed_annotation: ^2.4.1
+  uuid: ^4.3.3 # Mis à jour pour générer des identifiants uniques (state)
+  flutter_svg: ^2.0.10+1
+  cached_network_image: ^3.3.1
+  intl_phone_number_input: ^0.7.4
+  flutter_spinkit: ^5.2.0
+  shimmer: ^3.0.0
+  pull_to_refresh: ^2.0.0
+  dio: ^5.4.0
+  app_links: ^3.4.1 # Remplacé uni_links pour une meilleure maintenance
+  json_serializable: ^6.7.1
+  freezed: ^2.4.5
+  build_runner: ^2.4.6
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +50,7 @@ flutter:
   assets:
     - assets/fonts/
     - assets/images/
+    - .env
 
   # Fonts
   fonts:
