--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,10 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   http: ^1.2.1
-  firebase_core: ^3.13.1
-  firebase_auth: ^5.5.4
-  google_sign_in: ^6.1.6
+  firebase_core: ^3.13.1 # MÀJ pour compatibilité avec firestore et auth modernes
+  firebase_auth: ^5.5.4 # Downgrade pour compatibilité avec firebase_core ^2.31.0
+  cloud_firestore: ^5.6.8 # Ajout de cloud_firestore
+  google_sign_in: ^6.3.0
   flutter_local_notifications: ^16.2.0
   provider: ^6.1.1
   xml2json: ^6.2.7
@@ -42,6 +43,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^4.0.0 # Ajout pour les règles de linting recommandées
 
 flutter:
   uses-material-design: true
