--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
   cupertino_icons: ^1.0.2
   http: ^1.2.1
   firebase_core: ^3.13.1 # MÀJ pour compatibilité avec firestore et auth modernes
@@ -44,6 +47,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.7
+  hive_generator: ^2.0.1
+
   flutter_lints: ^4.0.0 # Ajout pour les règles de linting recommandées
 
 flutter:
